--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
             </div>
             <div class="action-card insta-card" onclick="window.open('https://www.instagram.com/rudranshrxr/','_blank')">
                 <h3>📸 Instagram</h3>
-                <p>Follow Rudransh</p>
+                <p>Build You Website, Contact Me</p>
             </div>
         </div>
 
